<resources>
    <string name="app_name">animationsAssignment2</string>
    <string name="string_app_name" />
    <string name="jump_button_txt"></string>
    <string name="attack_button_txt"></string>
    <string name="run_button_txt"></string>
    <string name="crouch_button_txt"></string>
    <string name="idle_button_txt"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>