<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ButtonsFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buittons">

    <Button
        android:id="@+id/attackButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/player_attack_5"
        android:text="@string/attack_button_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.706"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/jumpButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/player_jump_2"
        android:text="@string/jump_button_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/runButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/player_run_5"
        android:text="@string/run_button_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/crouchButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/player_crouch_0"
        android:text="@string/crouch_button_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/idleButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/player_idle_0"
        android:text="@string/idle_button_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>